Deploy/LB/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ccg-nginx-lb
spec:
  type: LoadBalancer
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 80
      targetPort: 80
  selector:
    app: ccg-web
