Deploy/LB/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ccg-ingress
spec:
  rules:
    - host: ccg.kurakuda.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: ccg-nginx-np # ccg-web-service ?
              servicePort: 80
          - path: /v2/*
            backend:
              serviceName: ccg-nginx-lb
              servicePort: 8080
  #backend:
  #  serviceName: ccg-nginx-np
  #  servicePort: 80
  tls:
    - hosts:
        - ccg.kurakuda.com
      secretName: tls-ccg
